--- a/docs/style/myStyle-light.css
+++ b/docs/style/myStyle-light.css
@@ -8,15 +8,17 @@ body {
   /* background:rgb(255, 255, 255); */
 }
 /* 置顶插件 */
-.to-top {
+.cd-top {
+  cursor: pointer;
   position: fixed;
   right: 25px;
-  z-index: 99;
+  z-index: 2;
   width: 70px;
   height: 900px;
-  top: 0px;
   background-size: contain;
-  background: url(http://wangshiyu.top/wp-content/uploads/2020/11/scroll.png);
+  background: url("https://gitee.com/wang_shiyu_wsy/image-bed/raw/master/img/20201122194141.png");
+  transition: all 0.5s ease-in-out;
+  opacity: 1;
   animation: round 1s ease-in-out 0s infinite alternate;
 }
 
